<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/clr_FFFFFF"
        tools:context=".activites.CreateProfileActivity">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="24dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/create"
                        android:textColor="@color/clr_111111"
                        android:textSize="26sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/profile"
                        android:textColor="@color/clr_EA2A31"
                        android:textSize="26sp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/login_txt"
                        android:textColor="@color/clr_666666"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/full_name"
                        android:textColor="@color/clr_888888"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/edtName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="6dp"
                        android:background="@drawable/edt_number_border"
                        android:gravity="center_vertical"
                        android:hint="enter your full name"
                        android:importantForAutofill="no"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:textSize="14sp"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/clr_999999" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/email"
                        android:textColor="@color/clr_888888"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/edtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="6dp"
                        android:background="@drawable/edt_number_border"
                        android:gravity="center_vertical"
                        android:hint="xyz@gmail.com"
                        android:importantForAutofill="no"
                        android:inputType="textEmailAddress"
                        android:paddingStart="16dp"
                        android:textSize="14sp"
                        android:paddingEnd="16dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/clr_999999" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/about_me"
                        android:textColor="@color/clr_888888"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/edtAbout"
                        android:layout_width="match_parent"
                        android:layout_height="114dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="6dp"
                        android:background="@drawable/edt_number_border"
                        android:gravity="start"
                        android:hint="@string/describe_here"
                        android:importantForAutofill="no"
                        android:inputType="textMultiLine"
                        android:padding="13dp"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/clr_999999" />

                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:padding="24dp">


            <Button
                android:id="@+id/btnStart"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/btn_gradiant_background"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/start"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp" />


        </LinearLayout>

    </RelativeLayout>
</layout>