<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/clr_FFFFFF"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/onboarding_screen_image"
            android:layout_marginTop="65dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="61dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:orientation="vertical">

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">

          <TextView
              android:id="@+id/txt_title_one"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/welcome_to"
              android:textSize="24sp"
              android:fontFamily="@font/roboto_medium"
              android:textColor="@color/clr_111111"/>

          <TextView
              android:id="@+id/txt_title_two"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/spreadster"
              android:textSize="24sp"
              android:fontFamily="@font/roboto_medium"
              android:textColor="@color/clr_EA2A31"/>

      </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <TextView
                    android:id="@+id/txt_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/onBoarding_text"
                    android:textSize="14sp"
                    android:fontFamily="@font/roboto_regular"
                    android:textColor="@color/clr_666666"/>

            </LinearLayout>



        </LinearLayout>


    </LinearLayout>
</layout>